# smart_bookshelf-BookGuard

./: .gitignore  Infrared Module.eprj2  README.md
data/: book-thickness.csv
docs/: hardware-wiring.md  protocol.md
scripts/: S99zz-bookshelf  bookshelf_supervisor.sh  stop_fsm.sh
src/app/: app.js  app.json  app.wxss  project.config.json
src/app/pages/borrow/: borrow.js  (+2 more)
src/app/utils/: api.js  config.js  mqtt.js
src/common/: sb_ipc.c  sb_ipc.h
src/db/: Makefile  README.md  db.c  db.h  db_test.c
src/fsm/: Makefile  README.md  fsm.c  fsm.h  main.c
src/infrared/: Makefile  README.md  ir_live.c  ir_monitor.c
src/ld2410c/: Makefile  README.md  ld2410c.c  ld2410c.h  ld2410c_test.c  radar_monitor.c
src/mqtt/: Makefile  json_builder.c  json_builder.h  mqtt_client.c  mqtt_client.h  mqtt_sensor_bridge.c  mqtt_test.c
src/sensors/: Makefile  README.md  i2c_sensors.c  i2c_watch.c
src/sensors/bh1750_standalone/: Makefile  README.md  bh1750_test.c
src/server/: .gitignore  config.example.py  db.py  main.py  mqtt_client.py  requirements.txt
src/uhf/: Makefile  README.md  test_uhf_check.c  uhf_cli.c  uhf_driver.c  uhf_driver.h  uhf_scanner.c  uhf_scanner.h  uhf_shelf_sweep.c  uhf_stop.c
src/ui/: CMakeLists.txt  README.md  main.c  ui_model.c  ui_model.h
src/ui/archive/: font_songti_24.c  mouse_cursor.h  string_s.c  string_s.h  stringlist.c  stringlist.h  window.c  window.h
src/wifi/: README.md  wifi_manager.c  wifi_manager.h
src/ws2812b/: Makefile  README.md  led_off.c  shelf_led.c  shelf_led.h  shelf_led_test.c  ws2812b.c  ws2812b.h  ws2812b_test.c
(+12 files in other folders)
